--- a/styles/_book-rating.scss
+++ b/styles/_book-rating.scss
@@ -1,6 +1,7 @@
 .container {
   background-color: $color-gray-light;
-  padding: 50px 100px;
+  padding: 50px 300px;
+  display: block;
 
   > p {
     font-size: 20px;
@@ -12,15 +13,20 @@
     flex-wrap: wrap;
     flex-direction: row;
     padding-top: 20px;
+    gap: 30px;
 
     &__card {
-      margin-left: 50px;
       width: 300px;
       background-color: $color-white;
 
       > img {
         width: 100%;
-        height: 250px;
+        height: 400px;
+      }
+
+      > p {
+        padding: 10px;
+        text-align: center;
       }
     }
   }
