--- a/styles/_page-book.scss
+++ b/styles/_page-book.scss
@@ -27,6 +27,7 @@
     &__card {
       width: 300px;
       background-color: $color-white;
+      cursor: pointer;
 
       > img {
         width: 100%;
